<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview"
            android:layout_centerHorizontal="true"
            android:text="Agrega Item Manualmente"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/mediomText" />

        <EditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="46dp"
            android:focusable="true"
            android:hint="Ingrese nombre item"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="@color/colorPrimary" />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_alignEnd="@+id/user_name"
            android:layout_alignRight="@+id/user_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:hint="Ingrese area"
            android:textColorHint="@color/colorPrimary" />


        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_alignEnd="@+id/user_name"
            android:layout_alignRight="@+id/user_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:hint="Ingrese categoria 2"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_alignEnd="@+id/user_name"
            android:layout_alignRight="@+id/user_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:hint="Ingrese categoria 3"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_alignEnd="@+id/user_name"
            android:layout_alignRight="@+id/user_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:hint="Ingrese categoria 4"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_alignEnd="@+id/user_name"
            android:layout_alignRight="@+id/user_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:hint="Ingrese categoria 5"
            android:textColorHint="@color/colorPrimary" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/code_scaner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Escanear codigo" />

            <Button
                android:id="@+id/upload_pic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
            android:text="Subir foto" />

            <!--            <Button-->
            <!--                android:id="@+id/save_"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="1"-->
            <!--                android:text="Subir foto" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Button
                android:id="@+id/save_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Guardar Datos" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancelar" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>